--- a/WebContent/WEB-INF/views/stylesheet.css
+++ b/WebContent/WEB-INF/views/stylesheet.css
@@ -12,7 +12,7 @@ body {
   font-family: 'EB Garamond', serif;
   font-weight: 300;
   font-size: 16px;
-  color: #555;
+  color: rgb(254, 255, 255);
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling: touch;
 }
@@ -21,8 +21,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Oswald', sans-serif;
-  font-weight: 300;
-  color: #333;
+  font-weight: 700;
+  color: rgb(254, 255, 255);
 }
 
 /* Paragraph & Typographic */
@@ -30,6 +30,11 @@ h1, h2, h3, h4, h5, h6 {
 p {
   line-height: 28px;
   margin-bottom: 25px;
+}
+
+.all-field-text {
+	font-weight: 24pt;
+	font-size: 15
 }
 
 .centered {
